work/59/Chain_Java/compile_stderr.txt
myMath/Function.java:6: error: ';' expected
/* tabs after comment */ 		return x*x
                         		          ^
1 error
